--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -10,7 +10,7 @@ $lightgrey: #fcfcfc;
 
 // Font stack
 
-$roboto: "Roboto", Arial, sans-serif;
+$sourcesans: "Source Sans Pro", Arial, sans-serif;
 $oldstandard: "Old Standard TT", Georgia, serif;
 
 // Various dimensions
