--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -1,5 +1,5 @@
 html {
-	font-family: $roboto;
+	font-family: $sourcesans;
 	font-size: 14px;
 
 	@include bp(tablet) {
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-	font-weight: 300;
+	font-weight: 400;
 }
 
 h1, h2, h3, h4 {
@@ -21,21 +21,17 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-	font-size: 4.444em;
+	font-size: 4em;
 	line-height: 1em;
-	font-weight: 100;
+	font-weight: 900;
 }
 
 h2 {
 	font-size: 2.5em;
 	line-height: 1em;
 	font-weight: 400;
-	font-style: italic;
 	font-family: $oldstandard;
-
-	+ .divider {
-		margin-top: -1.3rem;
-	}
+	font-style: italic;
 }
 
 h3 {
@@ -53,7 +49,7 @@ p {
 }
 
 strong {
-	font-weight: 500;
+	font-weight: 700;
 }
 
 a {
@@ -61,6 +57,6 @@ a {
 	text-decoration: none;
 
 	&:hover {
-		color: $lime;
+		color: $magenta;
 	}
 }
