--- a/public/css/style.css
+++ b/public/css/style.css
@@ -349,27 +349,31 @@ body {
 
 h1, h2, h3, h4 {
   margin-top: 0;
-  font-weight: inherit; }
+  font-weight: inherit;
+  font-family: "Old Standard TT", Georgia, serif; }
 
 h1 {
   font-size: 4em;
   line-height: 1em;
-  font-weight: 900; }
+  font-weight: 900;
+  font-family: "Source Sans Pro", Arial, sans-serif; }
 
 h2 {
   font-size: 2.5em;
   line-height: 1em;
   font-weight: 400;
-  font-family: "Old Standard TT", Georgia, serif;
   font-style: italic; }
 
 h3 {
-  font-size: 1em; }
+  font-size: 1.2em;
+  font-weight: 400;
+  font-style: italic; }
 
 p {
   letter-spacing: 0.04rem;
   font-size: 1em;
-  line-height: 1.5em; }
+  line-height: 1.5em;
+  margin-bottom: 1.5em; }
 
 strong {
   font-weight: 700; }
