--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -18,7 +18,6 @@ body {
 h1, h2, h3, h4 {
 	margin-top: 0;
 	font-weight: inherit;
-	font-family: $oldstandard;
 }
 
 h1 {
@@ -32,13 +31,15 @@ h2 {
 	font-size: 2.5em;
 	line-height: 1em;
 	font-weight: 400;
+	font-family: $oldstandard;
 	font-style: italic;
 }
 
 h3 {
 	font-size: 1.2em;
 	font-weight: 400;
-	font-style: italic;
+	margin-bottom: 1em;
+	border-bottom: 1px solid rgba(black, 0.2);
 }
 
 h4 {
