--- a/assets/scss/app/_sidebar.scss
+++ b/assets/scss/app/_sidebar.scss
@@ -9,6 +9,14 @@
 		margin-bottom: 0.5em;
 	}
 
+	h2 {
+		font-size: 2.5em;
+	}
+
+	.divider {
+		margin: 0;
+	}
+
 	.profile-pic {
 		width: 50%;
 		display: inline-block;
