--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -16,7 +16,7 @@ body {
 }
 
 h1, h2, h3, h4 {
-	margin-top: 0;
+	margin: 0;
 	font-weight: inherit;
 }
 
@@ -25,21 +25,22 @@ h1 {
 	line-height: 1em;
 	font-weight: 900;
 	font-family: $sourcesans;
+	margin-bottom: 0.5em;
 }
 
 h2 {
-	font-size: 2.5em;
+	font-size: 2em;
 	line-height: 1em;
-	font-weight: 400;
 	font-family: $oldstandard;
 	font-style: italic;
+	font-weight: 400;
+	margin-bottom: 0.5em;
 }
 
 h3 {
-	font-size: 1.2em;
-	font-weight: 400;
-	margin-bottom: 1em;
-	border-bottom: 1px solid rgba(black, 0.2);
+	font-size: 1em;
+	font-weight: 900;
+	margin-bottom: 0.6em;
 }
 
 h4 {
@@ -47,10 +48,9 @@ h4 {
 }
 
 p {
-	letter-spacing: 0.04rem;
 	font-size: 1em;
-	line-height: 1.5em;
-	margin-bottom: 1.5em;
+	line-height: 1.3em;
+	margin-bottom: 2em;
 }
 
 strong {
