--- a/assets/scss/app/_sidebar.scss
+++ b/assets/scss/app/_sidebar.scss
@@ -1,16 +1,32 @@
 .sidebar {
 	padding-top: 2em;
-	padding-bottom: 2em;
+	padding-bottom: 1em;
 	text-align: center;
-	border-right: 1px solid rgba(black, 0.2);
+	@extend .divider-icon;
+
+	&:after {
+		width: 100%;
+	}
+
+	@include bp(tablet) {
+		padding-bottom: 2em;
+		border-right: 1px solid rgba(black, 0.2);
+
+		&:after {
+			display: none;
+		}
+	}
 
 	p {
-		font-size: 0.8em;
 		margin-bottom: 0.5em;
 	}
 
 	h2 {
-		font-size: 2.5em;
+		font-size: 2em;
+
+		@include bp(desktop) {
+			font-size: 2.5em;
+		}
 	}
 
 	.divider {
@@ -18,19 +34,33 @@
 	}
 
 	.profile-pic {
-		width: 50%;
+		width: 30%;
 		display: inline-block;
 		border-radius: 50%;
 		overflow: hidden;
 		margin-bottom: 2em;
+		transition: all 0.3s ease-out;
+
+		@include bp(tablet) {
+			width: 50%;
+		}
+
+		&:hover {
+			transform: scale(1.2);
+		}
 
 		img {
+			transition: all 0.3s ease-out;
 			max-width: 100%;
 			display: block;
 		}
 	}
 
 	.about {
+
+		@include bp(tablet) {
+			font-size: 0.9em;
+		}
 
 		> p {
 			margin-bottom: 2em;
@@ -55,12 +85,11 @@
 			}
 
 			&.cols {
-				@include clear;
-				width: 50%;
-				float: left;
 
-				&:nth-child(even) {
-					border-left: 0;
+				@include bp(desktop) {
+					@include clear;
+					width: 50%;
+					float: left;
 				}
 			}
 		}
