--- a/assets/scss/modules/_elements.scss
+++ b/assets/scss/modules/_elements.scss
@@ -2,10 +2,14 @@
 
 	&:after {
 		content: "§";
+		line-height: 0.86em;
+		height: 1em;
+		vertical-align: middle;
 		display: inline-block;
+		text-align: center;
 		font-weight: 400;
 		font-family: $oldstandard;
-		font-size: 1em;
+		font-size: 3rem;
 		color: $grey;
 		transform: rotateZ(90deg);
 	}
@@ -14,12 +18,12 @@
 .divider {
 	width: 100%;
 	text-align: center;
-	font-size: 3rem;
 	margin: 0.5em 0;
 
 	@extend .divider-icon;
+}
 
-	&.small {
-		font-size: 1.5rem;
-	}
+.js-icon {
+	width: 2em;
+	color: $darkgrey;
 }
