--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -1,10 +1,6 @@
 html {
 	font-family: $sourcesans;
-	font-size: 14px;
-
-	@include bp(tablet) {
-		font-size: 16px;
-	}
+	font-size: 16px;
 
 	@include bp(desktop) {
 		font-size: 18px;
@@ -12,7 +8,7 @@ html {
 }
 
 body {
-	font-weight: 400;
+	font-weight: 300;
 }
 
 h1, h2, h3, h4 {
@@ -50,11 +46,12 @@ h4 {
 p {
 	font-size: 1em;
 	line-height: 1.3em;
+	margin-top: 0;
 	margin-bottom: 2em;
 }
 
 strong {
-	font-weight: 700;
+	font-weight: 500;
 }
 
 a {
