--- a/assets/scss/app/_general.scss
+++ b/assets/scss/app/_general.scss
@@ -1,7 +1,7 @@
 html {
-	background: url('../img/bg.png') no-repeat center bottom;
-	background-size: cover;
-	height: 100%;
+	//background: url('../img/bg.png') no-repeat center bottom;
+	//background-size: cover;
+	//height: 100%;
 }
 
 body {
