--- a/assets/scss/modules/_elements.scss
+++ b/assets/scss/modules/_elements.scss
@@ -18,12 +18,27 @@
 .divider {
 	width: 100%;
 	text-align: center;
-	margin: 0.5em 0;
+	margin: 1rem 0;
 
 	@extend .divider-icon;
 }
 
 .js-icon {
-	width: 2em;
+	width: 1.3em;
 	color: $darkgrey;
+}
+
+.mobile-only {
+
+	@include bp(tablet) {
+		display: none;
+	}
+}
+
+.mobile-hidden {
+	display: none;
+
+	@include bp(tablet) {
+		display: block;
+	}
 }
