--- a/public/css/style.css
+++ b/public/css/style.css
@@ -631,8 +631,7 @@ html {
   bottom: 0;
   width: 100%;
   background: white;
-  border-top: 1px solid rgba(0, 0, 0, 0.3);
-  text-align: center; }
+  border-top: 1px solid rgba(0, 0, 0, 0.3); }
   .admin-bar:after {
     content: "";
     display: table;
