--- a/assets/scss/app/_general.scss
+++ b/assets/scss/app/_general.scss
@@ -1,10 +1,7 @@
 html {
 	background: url('../img/bg.png') no-repeat center bottom;
 	background-size: cover;
-
-	@include bp(tablet) {
-		height: 100%;
-	}
+	min-height: 100%;
 }
 
 body {
@@ -19,6 +16,8 @@ body {
 
 	nav {
 		@include sidebar-width;
+		padding-right: 3%;
+		border-bottom: 1px solid darken($lightgrey, 10%);
 
 		@include bp(mobile) {
 			width: 100%;
@@ -30,11 +29,6 @@ body {
 			width: 50%;
 			display: inline-block;
 			padding: .5em 1em;
-			border-bottom: 1px solid darken($lightgrey, 10%);
-
-			+ * {
-				border-left: 0;
-			}
 		}
 
 		span {
@@ -91,9 +85,13 @@ body {
 	padding-top: 1.5em;
 
 	@include bp(tablet) {
-		padding-top: 1.5em;
 		width: 60%;
 		float: left;
+		padding-left: 4%;
+	}
+
+	@include bp(desktop) {
+		width: 70%;
 		padding-left: 5%;
 	}
 
