--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -2,7 +2,7 @@ html {
 	font-family: $sourcesans;
 	font-size: 16px;
 
-	@include bp(desktop) {
+	@include bp(tablet) {
 		font-size: 18px;
 	}
 }
@@ -45,7 +45,7 @@ h4 {
 
 p {
 	font-size: 1em;
-	line-height: 1.3em;
+	line-height: 1.5em;
 	margin-top: 0;
 	margin-bottom: 2em;
 }
