--- a/public/css/style.css
+++ b/public/css/style.css
@@ -338,7 +338,7 @@ ul {
 html {
   font-family: "Source Sans Pro", Arial, sans-serif;
   font-size: 16px; }
-  @media screen and (min-width: 1366px) {
+  @media screen and (min-width: 730px) {
     html {
       font-size: 18px; } }
 
@@ -371,7 +371,7 @@ h3 {
 
 p {
   font-size: 1em;
-  line-height: 1.3em;
+  line-height: 1.5em;
   margin-top: 0;
   margin-bottom: 2em; }
 
@@ -449,15 +449,15 @@ input[type="checkbox"] {
 
 html {
   background: url('../img/bg.png') no-repeat center bottom;
-  background-size: cover; }
-  @media screen and (min-width: 730px) {
-    html {
-      height: 100%; } }
+  background-size: cover;
+  min-height: 100%; }
 
 .site-header .container {
   margin: 0 auto; }
 .site-header nav {
-  width: 100%; }
+  width: 100%;
+  padding-right: 3%;
+  border-bottom: 1px solid #e3e3e3; }
   @media screen and (min-width: 540px) {
     .site-header nav {
       width: 70%; } }
@@ -475,10 +475,7 @@ html {
     height: 100%;
     width: 50%;
     display: inline-block;
-    padding: .5em 1em;
-    border-bottom: 1px solid #e3e3e3; }
-    .site-header nav a + *, .site-header nav span + * {
-      border-left: 0; }
+    padding: .5em 1em; }
   .site-header nav span {
     position: relative; }
     .site-header nav span:before {
@@ -547,9 +544,12 @@ html {
   padding-top: 1.5em; }
   @media screen and (min-width: 730px) {
     .page-container {
-      padding-top: 1.5em;
       width: 60%;
       float: left;
+      padding-left: 4%; } }
+  @media screen and (min-width: 1366px) {
+    .page-container {
+      width: 70%;
       padding-left: 5%; } }
   .page-container h2, .page-container p {
     margin-top: 0;
@@ -561,13 +561,12 @@ html {
         margin: 1.5rem 0; } }
 
 .sidebar {
-  padding-top: 2em;
   padding-bottom: 1em;
   text-align: center; }
   @media screen and (min-width: 730px) {
     .sidebar {
       padding-bottom: 2em;
-      border-right: 1px solid rgba(0, 0, 0, 0.2); }
+      border-right: 1px solid #e3e3e3; }
       .sidebar:after {
         display: none; } }
   .sidebar p {
